--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
     <header>
       <div class="grid grid-middle">
-        <div class="unit unit-xs-1 unit-s-1 unit-m-2-3 unit-l-2-3">
-          <h1 class="logo island">Solar System</h1>
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+          <h1 class="logo island push-1-4 pad-t-1-4 peta">Solar System</h1>
         </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-3 unit-l-1-3">
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
       <nav>
-        <ol>
-          <li><a href="#">Planets</a></li>
-          <li><a href="#">Moons</a></li>
-          <li><a href="#">Exploration</a></li>
+        <ol class="gutter-1-2 pad-t-1-4 push-1-4">
+          <li class="island-1-4"><a href="#">Planets</a></li>
+          <li class="island-1-4"><a href="#">Moons</a></li>
+          <li class="island-1-4"><a href="#">Exploration</a></li>
         </ol>
       </nav>
     </div>
