putting in required content and adjusting lines

--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <header>
-      <div class="grid grid-middle">
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-          <h1 class="logo island push-1-4 pad-t-1-4 peta">Solar System</h1>
-        </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
-      <nav>
-        <ol class="gutter-1-2 pad-t-1-4 push-1-4">
-          <li class="island-1-4"><a href="#">Planets</a></li>
-          <li class="island-1-4"><a href="#">Moons</a></li>
-          <li class="island-1-4"><a href="#">Exploration</a></li>
-        </ol>
-      </nav>
+  <header>
+    <div class="grid grid-middle">
+      <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+        <h1 class="logo island push-1-4 pad-t-1-4 peta">Solar System</h1>
+      </div>
+      <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-2">
+        <nav>
+          <ul class="gutter-1-2 pad-t-1-4 push-1-4">
+            <li class="island-1-4"><a href="#">Planets</a></li>
+            <li class="island-1-4"><a href="#">Moons</a></li>
+            <li class="island-1-4"><a href="#">Exploration</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-    </header>
+  </header>
 
 </body>
 </html>
